# ce-notes

./: Cargo.toml  README.md  ceapp.toml
.github/workflows/: ci.yml
examples/: quickstart.rs
scripts/: two-device-demo.ps1  two-device-demo.sh
src/: lib.rs
src/core/: crypto.rs  mergelog.rs  mod.rs  model.rs  notedoc.rs  notes.rs  store.rs
tests/: live_node.rs  properties.rs
